@@ -1,7 +1,6 @@
 package com.example.finalproject.domain.codi;
 
 import com.example.finalproject.domain.admin.Admin;
-import com.example.finalproject.domain.codiItems.CodiItems;
 import com.example.finalproject.domain.items.Items;
 import com.example.finalproject.domain.love.Love;
 import com.example.finalproject.domain.photo.Photo;
@@ -17,14 +16,12 @@ public class CodiResponse {
     @Data
     public static class UpdatePage {
         private Integer codiId;
-        private String codiTitle;
         private String description;
         private List<CodiPhoto> codiPhotos;
         private List<CodiItemPhoto> codiItemPhotos;
 
         public UpdatePage(Codi codi, List<Photo> codiPhotos, List<Photo> codiItemPhotos) {
             this.codiId = codi.getId();
-            this.codiTitle = codi.getTitle();
             this.description = codi.getDescription();
             this.codiPhotos = codiPhotos.stream().map(CodiPhoto::new).toList();
             this.codiItemPhotos = codiItemPhotos.stream().map(CodiItemPhoto::new).toList();
@@ -34,14 +31,14 @@ public class CodiResponse {
         public class CodiPhoto {
             private Integer photoId;
             private Integer codiId;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
             private Photo.Sort sort;
 
             public CodiPhoto(Photo photo) {
                 this.photoId = photo.getId();
                 this.codiId = photo.getCodi().getId();
-                this.base64 = photo.toBase64(photo);
+                this.photoPath = photo.getPath();
                 this.isMainPhoto = photo.getIsMainPhoto();
                 this.sort = photo.getSort();
             }
@@ -51,14 +48,14 @@ public class CodiResponse {
         public class CodiItemPhoto {
             private Integer photoId;
             private Integer itemId;
-            private String base64;
+            private String photoPath;
             private String categoryName;
             private Photo.Sort sort;
 
             public CodiItemPhoto(Photo photo) {
                 this.photoId = photo.getId();
                 this.itemId = photo.getItems().getId();
-                this.base64 = photo.toBase64(photo);
+                this.photoPath = photo.getPath();
                 this.categoryName = photo.getItems().getCategory().getMain();
                 this.sort = photo.getSort();
             }
@@ -71,13 +68,13 @@ public class CodiResponse {
     public static class BrandInfo {
         private Integer brandId;
         private Integer photoId;
-        private String base64;
+        private String photoPath;
         private List<ItemInfo> itemInfo;
 
         public BrandInfo(Admin admin, List<Items> items) {
             this.brandId = admin.getId();
             this.photoId = admin.getPhoto().getId();
-            this.base64 = admin.getPhoto().toBase64(admin.getPhoto());
+            this.photoPath = admin.getPhoto().getPath();
             this.itemInfo = items.stream().map(ItemInfo::new).toList();
         }
 
@@ -85,53 +82,29 @@ public class CodiResponse {
         public static class ItemInfo {
             private Integer itemId;
             private String itemName;
-            private String base64;
+            private String photoPath;
 
             public ItemInfo(Items items) {
                 this.itemId = items.getId();
                 this.itemName = items.getName();
-                this.base64 = items.getPhotos().getFirst().toBase64(items.getPhotos().getFirst());
+                this.photoPath = items.getPhotos().getFirst().getPath();
             }
         }
     }
 
     // 코디 등록할 때 사용하는 DTO
     @Data
-    public static class NewLinkItems {
+    public static class SavedCodi {
         private Integer codiId;
         private Integer userId;
-        private String codiTitle;
-        private List<SavedPhoto> savedPhotos;
-        private List<LinkedItem> linkedItems;
+        private Integer photoId;
+        private String photoPath;
 
-        public NewLinkItems(Codi saveCodi, List<Photo> savedPhotos, List<CodiItems> linkedCodiItems) {
+        public SavedCodi(Codi saveCodi, Photo photo) {
             this.codiId = saveCodi.getId();
             this.userId = saveCodi.getUser().getId();
-            this.codiTitle = saveCodi.getTitle();
-            this.savedPhotos = savedPhotos.stream().map(SavedPhoto::new).toList();
-            this.linkedItems = linkedCodiItems.stream().map(LinkedItem::new).toList();
-        }
-
-        @Data
-        public class SavedPhoto {
-            private Integer photoId;
-            private String photoName;
-
-            public SavedPhoto(Photo photo) {
-                this.photoId = photo.getId();
-                this.photoName = photo.getUuidName();
-            }
-        }
-
-        @Data
-        public class LinkedItem {
-            private Integer codiId;
-            private Integer itemId;
-
-            public LinkedItem(CodiItems codiItems) {
-                this.codiId = codiItems.getCodi().getId();
-                this.itemId = codiItems.getItems().getId();
-            }
+            this.photoId = photo.getId();
+            this.photoPath = photo.getPath();
         }
     }
 
@@ -169,13 +142,13 @@ public class CodiResponse {
         public class MainPhoto {
             private Integer mainPhotoId;
             private String mainPhotoName;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
 
             public MainPhoto(Photo mainPhoto) {
                 this.mainPhotoId = mainPhoto.getId();
                 this.mainPhotoName = mainPhoto.getUuidName();
-                this.base64 = mainPhoto.toBase64(mainPhoto);
+                this.photoPath = mainPhoto.getPath();
                 this.isMainPhoto = mainPhoto.getIsMainPhoto();
             }
         }
@@ -185,14 +158,14 @@ public class CodiResponse {
             private Integer itemsPhotoId;
             private Integer itemsId;
             private String itemsPhotoName;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
 
             public ItemsPhoto(Photo photo) {
                 this.itemsPhotoId = photo.getId();
                 this.itemsId = photo.getItems().getId();
                 this.itemsPhotoName = photo.getUuidName();
-                this.base64 = photo.toBase64(photo);
+                this.photoPath = photo.getPath();
                 this.isMainPhoto = photo.getIsMainPhoto();
             }
         }
@@ -202,14 +175,14 @@ public class CodiResponse {
             private Integer codiId;
             private Integer codiPhotoId;
             private String codiPhotoName;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
 
             public CodiPhoto(Photo photo) {
                 this.codiId = photo.getCodi().getId();
                 this.codiPhotoId = photo.getId();
                 this.codiPhotoName = photo.getUuidName();
-                this.base64 = photo.toBase64(photo);
+                this.photoPath = photo.getPath();
                 this.isMainPhoto = photo.getIsMainPhoto();
             }
         }
@@ -246,13 +219,13 @@ public class CodiResponse {
         public class MainPhoto {
             private Integer mainPhotoId;
             private String mainPhotoName;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
 
             public MainPhoto(Photo mainPhoto) {
                 this.mainPhotoId = mainPhoto.getId();
                 this.mainPhotoName = mainPhoto.getUuidName();
-                this.base64 = mainPhoto.toBase64(mainPhoto);
+                this.photoPath = mainPhoto.getPath();
                 this.isMainPhoto = mainPhoto.getIsMainPhoto();
             }
         }
@@ -262,14 +235,14 @@ public class CodiResponse {
             private Integer itemsPhotoId;
             private Integer itemsId;
             private String itemsPhotoName;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
 
             public ItemsPhoto(Photo photo) {
                 this.itemsPhotoId = photo.getId();
                 this.itemsId = photo.getItems().getId();
                 this.itemsPhotoName = photo.getUuidName();
-                this.base64 = photo.toBase64(photo);
+                this.photoPath = photo.getPath();
                 this.isMainPhoto = photo.getIsMainPhoto();
             }
         }
@@ -279,14 +252,14 @@ public class CodiResponse {
             private Integer codiPhotoId;
             private Integer codiId;
             private String codiPhotoName;
-            private String base64;
+            private String photoPath;
             private Boolean isMainPhoto;
 
             public CodiPhoto(Photo photo) {
                 this.codiPhotoId = photo.getId();
                 this.codiId = photo.getCodi().getId();
                 this.codiPhotoName = photo.getUuidName();
-                this.base64 = photo.toBase64(photo);
+                this.photoPath = photo.getPath();
                 this.isMainPhoto = photo.getIsMainPhoto();
             }
         }
@@ -296,20 +269,18 @@ public class CodiResponse {
     @Data
     public static class CodiListDTO {
         private Integer codiId;
-        private String title;
         private Integer codiPhotoId;
         private String photoName;
-        private String base64;
+        private String photoPath;
 
         public CodiListDTO(Codi codi) {
             this.codiId = codi.getId();
-            this.title = codi.getTitle();
             List<Photo> codiPhotos = codi.getPhotos();
             if (codiPhotos != null && !codiPhotos.isEmpty()) {
-                Photo codiPhoto = codiPhotos.get(0); // 첫 번째 포토만 사용
+                Photo codiPhoto = codiPhotos.getFirst(); // 첫 번째 포토만 사용
                 this.codiPhotoId = codiPhoto.getId();
                 this.photoName = codiPhoto.getUuidName();
-                this.base64 = codiPhoto.toBase64(codiPhoto);
+                this.photoPath = codiPhoto.getPath();
             }
         }
     }
